# py

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG  Makefile  Pipfile  README.rst  devel-requirements.txt  extra-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml
doc/: .gitignore  Makefile  apiclient.rst  cli.rst  conf.py  get-deps.sh  index.rst  instances.rst  tutorial.rst
rerobots/: __init__.py  api.py  cli.py  instances.py  types.py
tests/: test_anonymous.py  test_apimock.py  test_cli.py  test_clientobj.py  test_instancecover.py
tests/realserv/: test_anonymous.py  test_instancecover.py
