[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rerobots"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "requests",
]
license = {text = "Apache-2.0"}
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pyflakes",
    "pylint",
    "pytest",
    "responses",
    "tox",
]
