[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rerobots"
description = "client library for rerobots"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "requests",
]
authors = [{name = "rerobots, Inc.", email = "q@rerobots.net"}]
license = {text = "Apache-2.0"}
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
source = "https://github.com/rerobots/py"

[project.optional-dependencies]
test = [
    "black",
    "coverage",
    "pyflakes",
    "pylint",
    "pytest",
    "responses",
    "tox",
]
extra = [
    "numpy",
    "Pillow",
    "paramiko",
]

[tool.setuptools]
packages = ["rerobots"]

[tool.black]
skip-string-normalization = true
